# kappa-backend

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  index.html  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_performance_indexes.py
app/application/: dto.py
app/application/ports/: __init__.py  engine_ia.py  repositories.py
app/application/use_cases/: __init__.py  avaliar_submissao.py  criar_missao.py  obter_dashboard_aluno.py  processar_evolucao.py  submeter_codigo.py
app/domain/: __init__.py  entities.py  enums.py  exceptions.py  state_machines.py
app/infrastructure/database/: mappers.py  mission_status.py  models.py  unit_of_work.py
app/infrastructure/integrations/: judge0_engine_ia.py  mock_engine_ia.py
app/infrastructure/repositories/: sqlalchemy_aluno_repository.py  sqlalchemy_badge_repository.py  sqlalchemy_correcao_repository.py  sqlalchemy_missao_repository.py  sqlalchemy_professor_repository.py  sqlalchemy_progresso_repository.py  sqlalchemy_ranking_repository.py  sqlalchemy_submissao_repository.py
app/presentation/: dependencies.py  main.py
core/: config.py  database.py  logging_config.py  security.py
scripts/: seed.py  setup_database.py  verify_schema.py
tests/integration/: conftest.py  test_repositories.py
tests/unit/: test_avaliar_submissao_use_case.py  test_criar_missao_use_case.py  test_processar_evolucao_use_case.py  test_security_phase4_api.py  test_state_machines.py  test_submeter_codigo_use_case.py
(+9 files in other folders)
